--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -3355,6 +3355,7 @@
                     formData.append('photo', blob);
                     formData.append('text', text);
                     formData.append('chat_id', chatId);
+                    formData.append('context', 'support');
 
                     // Create AbortController for timeout
                     const controller = new AbortController();
