--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1801,7 +1801,6 @@
 
         .custom-alert-icon {
             font-size: 48px;
-            color: #28a745;
             margin-bottom: 15px;
         }
 
