--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1252,7 +1252,7 @@
         th,
         td {
             border: 1px solid #555;
-            padding: 2px 30px;
+            padding: 2px 5px;
             text-align: left;
             color: white;
             word-spacing: 16px;
